--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,12 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools
 
+      - name: Install Python GLPK package
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y --no-install-recommends gcc libglpk-dev
+          pip install glpk
+
       # install package
       - name: Install the package
         run: python -m pip install .[all]
