--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,12 +13,22 @@
       "contributions": [
         "code"
       ]
-    }   
+    },
+    {
+      "login": "bgoli",
+      "name": "Brett Olivier",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5011985?v=4",
+      "profile": "http://teusinkbruggemanlab.nl/brett-olivier/",
+      "contributions": [
+        "tool"
+      ]
+    }
   ],
   "contributorsPerLine": 7,
   "projectName": "Biosimulators_CBMPy",
   "projectOwner": "biosimulators",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "skipCi": true
+  "skipCi": true,
+  "commitConvention": "none"
 }
